@@ -92,6 +92,8 @@ text_layout_render(Thread_Context *tctx, Models *models, Text_Layout *layout,
         Face *face = file_get_face(models, file);
         f32 width = rect_width(layout->rect);
         
+        Vec2_f32 delta = V2f32(1.f, 0.f);
+        
         Vec2_f32 shift_p = layout->rect.p0 - layout->point.pixel_shift;
         i64 first_index = layout->visible_range.first;
         i64 line_number = layout->visible_line_number_range.min;
@@ -120,7 +122,7 @@ text_layout_render(Thread_Context *tctx, Models *models, Text_Layout *layout,
                             color = item_colors[item->index - first_index];
                         }
                         Vec2_f32 p = item->rect.p0 + shift_p;
-                        draw_font_glyph(target, face, item->codepoint, p, color, GlyphFlag_None);
+                        draw_font_glyph(target, face, item->codepoint, p, color, GlyphFlag_None, delta);
                     }
                 }
             }
