@@ -469,7 +469,6 @@ api(custom)
 typedef u32 Glyph_Flag;
 enum{
     GlyphFlag_None = 0x0,
-    GlyphFlag_Rotate90 = 0x1,
 };
 
 api(custom)
